Fix FormBlock mobile spacing

--- a/app/assets/stylesheets/forms.css.sass
+++ b/app/assets/stylesheets/forms.css.sass
@@ -82,4 +82,4 @@ select
   background: $grey-4
 
   @include media(mobile)
-    padding: .5em 30px
+    padding: .5em 5px
